Summary of changes between Frotz 2.55 and Frotz 2.55:
=====================================================

Frotz 2.55 is currently in development.

NEW FEATURES

- Added -L option to xfrotz - supply a Quetzal file to load on command line.

- Added support for the Z-Machine Standard 1.1 save-restore prompt option.

BUG FIXES

- Fixed a segfault when xfrotz detects a fatal error.

- Fixed compile failure of the SDL interface for GCC 12 and maybe GCC 11.

- Not a bug in Frotz itself, but the BUGS text file was deleted from the
  source repository and tarball before the release of Frotz 2.50.

- Fixed faulty handling of text styles in dumb interface.


Summary of changes between Frotz 2.53 and Frotz 2.54:
=====================================================

Frotz 2.54 was released on Wednesday April 13, 2022.

This release's main attractions are official support for TOPS20 and
cross-compilation to DOS.

NEW FEATURES

- Added changes to allow for compilation on a DEC PDP-10 mainframe
  running TOPS20.  See INSTALL_PDP10.

- Added a means to cross-compile to DOS by way of Open Watcom C version
  2 and later.  See INSTALL_DOS.

- Added a quiet mode to dumb interface to quell startup messages.

BUG FIXES

- Fixed several problems with compilation under macOS.

- Fixed wrong glyphs in DOS Frotz's Amiga font mode.  1/2 and 1/4 were
  there instead of the oe and OE ligatures.

- Fixed a failure of the -q flag to actually silence sound effects.

- Fixed an oversight in SDL Frotz that prevented some sounds from
  playing in Lurking Horror.

- Made the dumb and curses interfaces read the resolution chunk from
  Blorb files.  Previously they would assume a resolution of 320x200.


Summary of changes between Frotz 2.52 and Frotz 2.53:
=====================================================

Frotz 2.53 was released on Saturday February 27, 2021.

This is a minor release focusing on minor enhancements and bug fixes.

NEW FEATURES
