@@ -205,7 +205,7 @@ toned down.
 .TP
 .B \-u N
 Sets the number of slots available for Frotz's multiple undo hotkey (see
-below).  This defaults to twenty, which should be sufficient for most
+below).  This defaults to 25, which should be sufficient for most
 purposes.  Setting too high a number here may be dangerous on machines
 with limited memory.
 .TP
